Change in traduction Pad to Hoop

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -13,8 +13,8 @@
 			"10": "Tux-tn"
 		}
 	},
-	"index.newPad": "Nouveau Pad",
-	"index.createOpenPad": "ou cr\u00e9er\/ouvrir un Pad intitul\u00e9 :",
+	"index.newPad": "Nouveau Hoop",
+	"index.createOpenPad": "ou cr\u00e9er\/ouvrir un Hoop intitul\u00e9 :",
 	"pad.toolbar.bold.title": "Gras (Ctrl-B)",
 	"pad.toolbar.italic.title": "Italique (Ctrl-I)",
 	"pad.toolbar.underline.title": "Soulign\u00e9 (Ctrl-U)",
@@ -30,15 +30,15 @@
 	"pad.toolbar.timeslider.title": "Historique dynamique",
 	"pad.toolbar.savedRevision.title": "Versions enregistr\u00e9es",
 	"pad.toolbar.settings.title": "Param\u00e8tres",
-	"pad.toolbar.embed.title": "Int\u00e9grer ce Pad",
-	"pad.toolbar.showusers.title": "Afficher les utilisateurs du Pad",
+	"pad.toolbar.embed.title": "Int\u00e9grer ce Hoop",
+	"pad.toolbar.showusers.title": "Afficher les utilisateurs du Hoop",
 	"pad.colorpicker.save": "Enregistrer",
 	"pad.colorpicker.cancel": "Annuler",
 	"pad.loading": "Chargement\u2026",
-	"pad.passwordRequired": "Vous avez besoin d'un mot de passe pour acc\u00e9der \u00e0 ce Pad",
-	"pad.permissionDenied": "Il ne vous est pas permis d\u2019acc\u00e9der \u00e0 ce Pad",
+	"pad.passwordRequired": "Vous avez besoin d'un mot de passe pour acc\u00e9der \u00e0 ce Hoop",
+	"pad.permissionDenied": "Il ne vous est pas permis d\u2019acc\u00e9der \u00e0 ce Hoop",
 	"pad.wrongPassword": "Mot de passe incorrect",
-	"pad.settings.padSettings": "Param\u00e8tres du Pad",
+	"pad.settings.padSettings": "Param\u00e8tres du Hoop",
 	"pad.settings.myView": "Ma vue",
 	"pad.settings.stickychat": "Toujours afficher le chat",
 	"pad.settings.colorcheck": "Couleurs d\u2019identification",
@@ -51,7 +51,7 @@
 	"pad.importExport.import_export": "Importer\/Exporter",
 	"pad.importExport.import": "Charger un texte ou un document",
 	"pad.importExport.importSuccessful": "R\u00e9ussi!",
-	"pad.importExport.export": "Exporter le Pad actuel comme :",
+	"pad.importExport.export": "Exporter le Hoop actuel comme :",
 	"pad.importExport.exporthtml": "HTML",
 	"pad.importExport.exportplain": "Texte brut",
 	"pad.importExport.exportword": "Microsoft Word",
@@ -60,10 +60,10 @@
 	"pad.importExport.exportdokuwiki": "DokuWiki",
 	"pad.importExport.abiword.innerHTML": "Vous ne pouvez importer que des formats texte brut ou html. Pour des fonctionnalit\u00e9s d'importation plus \u00e9volu\u00e9es, veuillez <a href=\"https:\/\/github.com\/ether\/etherpad-lite\/wiki\/How-to-enable-importing-and-exporting-different-file-formats-in-Ubuntu-or-OpenSuse-or-SLES-with-AbiWord\">installer abiword<\/a>.",
 	"pad.modals.connected": "Connect\u00e9.",
-	"pad.modals.reconnecting": "Reconnexion vers votre Pad...",
+	"pad.modals.reconnecting": "Reconnexion vers votre Hoop...",
 	"pad.modals.forcereconnect": "Forcer la reconnexion.",
 	"pad.modals.userdup": "Ouvert dans une autre fen\u00eatre",
-	"pad.modals.userdup.explanation": "Il semble que ce Pad soit ouvert dans plusieurs fen\u00eatres de votre navigateur sur cet ordinateur.",
+	"pad.modals.userdup.explanation": "Il semble que ce Hoop soit ouvert dans plusieurs fen\u00eatres de votre navigateur sur cet ordinateur.",
 	"pad.modals.userdup.advice": "Se reconnecter en utilisant cette fen\u00eatre.",
 	"pad.modals.unauth": "Non autoris\u00e9",
 	"pad.modals.unauth.explanation": "Vos permissions ont \u00e9t\u00e9 chang\u00e9es lors de l'affichage de cette page. Essayez de vous reconnecter.",
@@ -77,11 +77,11 @@
 	"pad.modals.slowcommit.explanation": "Le serveur ne r\u00e9pond pas.",
 	"pad.modals.slowcommit.cause": "Ce probl\u00e8me peut venir d'une mauvaise connectivit\u00e9 au r\u00e9seau.",
 	"pad.modals.deleted": "Supprim\u00e9.",
-	"pad.modals.deleted.explanation": "Ce Pad a \u00e9t\u00e9 supprim\u00e9.",
+	"pad.modals.deleted.explanation": "Ce Hoop a \u00e9t\u00e9 supprim\u00e9.",
 	"pad.modals.disconnected": "Vous avez \u00e9t\u00e9 d\u00e9connect\u00e9.",
 	"pad.modals.disconnected.explanation": "La connexion au serveur a \u00e9chou\u00e9.",
 	"pad.modals.disconnected.cause": "Il se peut que le serveur soit indisponible. Veuillez nous en informer si le probl\u00e8me persiste.",
-	"pad.share": "Partager ce Pad",
+	"pad.share": "Partager ce Hoop",
 	"pad.share.readonly": "Lecture seule",
 	"pad.share.link": "Lien",
 	"pad.share.emebdcode": "Lien \u00e0 int\u00e9grer",
@@ -89,7 +89,7 @@
 	"pad.chat.title": "Ouvrir le chat associ\u00e9 \u00e0 ce pad.",
 	"pad.chat.loadmessages": "Charger davantage de messages",
 	"timeslider.pageTitle": "Historique dynamique de {{appTitle}}",
-	"timeslider.toolbar.returnbutton": "Retour \u00e0 ce Pad.",
+	"timeslider.toolbar.returnbutton": "Retour \u00e0 ce Hoop.",
 	"timeslider.toolbar.authors": "Auteurs :",
 	"timeslider.toolbar.authorsList": "Aucun auteur",
 	"timeslider.toolbar.exportlink.title": "Exporter",
