--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
-  "index.newPad": "New Pad",
-  "index.createOpenPad": "or create/open a Pad with the name:",
+  "index.newPad": "New Hoop",
+  "index.createOpenPad": "or create/open a Hoop with the name:",
   "pad.toolbar.bold.title": "Bold (Ctrl-B)",
   "pad.toolbar.italic.title": "Italic (Ctrl-I)",
   "pad.toolbar.underline.title": "Underline (Ctrl-U)",
@@ -16,13 +16,13 @@
   "pad.toolbar.timeslider.title": "Timeslider",
   "pad.toolbar.savedRevision.title": "Save Revision",
   "pad.toolbar.settings.title": "Settings",
-  "pad.toolbar.embed.title": "Embed this pad",
-  "pad.toolbar.showusers.title": "Show the users on this pad",
+  "pad.toolbar.embed.title": "Embed this hoop",
+  "pad.toolbar.showusers.title": "Show the users on this hoop",
   "pad.colorpicker.save": "Save",
   "pad.colorpicker.cancel": "Cancel",
   "pad.loading": "Loading...",
-  "pad.passwordRequired": "You need a password to access this pad",
-  "pad.permissionDenied": "You do not have permission to access this pad",
+  "pad.passwordRequired": "You need a password to access this hoop",
+  "pad.permissionDenied": "You do not have permission to access this hoop",
   "pad.wrongPassword": "Your password was wrong",
   "pad.settings.padSettings": "Pad Settings",
   "pad.settings.myView": "My View",
@@ -37,7 +37,7 @@
   "pad.importExport.import_export": "Import/Export",
   "pad.importExport.import": "Upload any text file or document",
   "pad.importExport.importSuccessful": "Successful!",
-  "pad.importExport.export": "Export current pad as:",
+  "pad.importExport.export": "Export current hoop as:",
   "pad.importExport.exporthtml": "HTML",
   "pad.importExport.exportplain": "Plain text",
   "pad.importExport.exportword": "Microsoft Word",
@@ -46,10 +46,10 @@
   "pad.importExport.exportdokuwiki": "DokuWiki",
   "pad.importExport.abiword.innerHTML": "You only can import from plain text or html formats. For more advanced import features please <a href=\"https://github.com/ether/etherpad-lite/wiki/How-to-enable-importing-and-exporting-different-file-formats-in-Ubuntu-or-OpenSuse-or-SLES-with-AbiWord\">install abiword</a>.",
   "pad.modals.connected": "Connected.",
-  "pad.modals.reconnecting": "Reconnecting to your pad..",
+  "pad.modals.reconnecting": "Reconnecting to your hoop..",
   "pad.modals.forcereconnect": "Force reconnect",
   "pad.modals.userdup": "Opened in another window",
-  "pad.modals.userdup.explanation": "This pad seems to be opened in more than one browser window on this computer.",
+  "pad.modals.userdup.explanation": "This hoop seems to be opened in more than one browser window on this computer.",
   "pad.modals.userdup.advice": "Reconnect to use this window instead.",
   "pad.modals.unauth": "Not authorized",
   "pad.modals.unauth.explanation": "Your permissions have changed while viewing this page. Try to reconnect.",
@@ -63,19 +63,19 @@
   "pad.modals.slowcommit.explanation": "The server is not responding.",
   "pad.modals.slowcommit.cause": "This could be due to problems with network connectivity.",
   "pad.modals.deleted": "Deleted.",
-  "pad.modals.deleted.explanation": "This pad has been removed.",
+  "pad.modals.deleted.explanation": "This hoop has been removed.",
   "pad.modals.disconnected": "You have been disconnected.",
   "pad.modals.disconnected.explanation": "The connection to the server was lost",
   "pad.modals.disconnected.cause": "The server may be unavailable. Please notify us if this continues to happen.",
-  "pad.share": "Share this pad",
+  "pad.share": "Share this hoop",
   "pad.share.readonly": "Read only",
   "pad.share.link": "Link",
   "pad.share.emebdcode": "Embed URL",
   "pad.chat": "Chat",
-  "pad.chat.title": "Open the chat for this pad.",
+  "pad.chat.title": "Open the chat for this hoop.",
   "pad.chat.loadmessages": "Load more messages",
   "timeslider.pageTitle": "{{appTitle}} Timeslider",
-  "timeslider.toolbar.returnbutton": "Return to pad",
+  "timeslider.toolbar.returnbutton": "Return to hoop",
   "timeslider.toolbar.authors": "Authors:",
   "timeslider.toolbar.authorsList": "No Authors",
   "timeslider.toolbar.exportlink.title": "Export",
@@ -106,7 +106,7 @@
   "pad.editbar.clearcolors": "Clear authorship colors on entire document?",
   "pad.impexp.importbutton": "Import Now",
   "pad.impexp.importing": "Importing...",
-  "pad.impexp.confirmimport": "Importing a file will overwrite the current text of the pad. Are you sure you want to proceed?",
+  "pad.impexp.confirmimport": "Importing a file will overwrite the current text of the hoop. Are you sure you want to proceed?",
   "pad.impexp.convertFailed": "We were not able to import this file. Please use a different document format or copy paste manually",
   "pad.impexp.uploadFailed": "The upload failed, please try again",
   "pad.impexp.importfailed": "Import failed",
